--- a/argocd-applications/virtual-argocds.yaml
+++ b/argocd-applications/virtual-argocds.yaml
@@ -10,8 +10,8 @@ spec:
   source:
     directory:
       recurse: true
-      include: '*.yaml'
-    repoURL: https://github.com/codefresh-contrib/demo-crossplane-vcluster
+      include: "*.yaml"
+    repoURL: https://github.com/viveleroy/demo-crossplane-vcluster
     targetRevision: HEAD
     path: virtualargocds
   syncPolicy:
