--- a/crossplane-resources/kubernetes-provider/provider-kubernetes.yaml
+++ b/crossplane-resources/kubernetes-provider/provider-kubernetes.yaml
@@ -5,6 +5,6 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
 spec:
-  package: "crossplane/provider-kubernetes:v0.4.1"
+  package: xpkg.upbound.io/crossplane-contrib/provider-kubernetes:v0.15.0
   controllerConfigRef:
     name: kubernetes-controller-config
